# IML_Project

./: .gitignore
backend/: pyproject.toml
backend/src/backend/: main.py
backend/src/backend/architectures/: base_model.py  conv_model.py  rf_model.py
backend/src/backend/architectures/neural_networks/: conv_model.py  dense_model.py  keras_base.py
backend/src/backend/data/: balance.py  pipeline.py  providers.py
backend/src/backend/evaluate/: evaluator.py
backend/src/backend/mappers/: img_format.py  map_classes.py  normalize.py
backend/src/backend/train_and_evaluate/evaluate/: evaluator.py
backend/src/backend/utils/: callbacks.py  conosle_app.py  image_loader.py
frontend/: index.html
frontend/css/: text.css  upload-box.css
frontend/js/: upload-box.js
