[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Sekanko", email = "sekankodev@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.3.3,<3.0.0",
    "tensorflow>=2.20.0,<3.0.0",
    "numpy>=2.4.1,<3.0.0",
    "scikit-learn>=1.8.0,<2.0.0",
    "fastapi[standard]>=0.128.0,<0.129.0",
    "nvidia-cudnn-cu12>=9.18.0.77,<10.0.0.0",
    "nvidia-cublas-cu12>=12.9.1.4,<13.0.0.0",
    "opencv-python (>=4.13.0.90,<5.0.0.0)",
    "kagglehub (>=0.4.1,<0.5.0)",
]

[tool.poetry]
packages = [{ include = "backend", from = "src" }]

[tool.poetry.scripts]
api = "backend.main:start_api"
dev = "backend.main:start_dev"

[dependency-groups]
dev = [
    "pytest>=9.0.2,<10.0.0",
    "pytest-mock>=3.15.1,<4.0.0",
]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"